--- a/The battle of Neighborhoods.ipynb
+++ b/The battle of Neighborhoods.ipynb
@@ -1288,7 +1288,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1323,8 +1322,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = 'EIOUVR2C1ZF0XDXJB450XB4JOZNA1EZYDQWZX4OUGRLXKPUU' \n",
-    "CLIENT_SECRET = 'CCPXBMWU5WDKMU4DW355ZST3112RPJVCTDTYNDHGW2QPN4ZK' \n",
+    "CLIENT_ID = '*****' \n",
+    "CLIENT_SECRET = '*****' \n",
     "VERSION = '20180605' # Foursquare API version"
    ]
   },
@@ -2211,7 +2210,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2235,7 +2233,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2278,7 +2275,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
